sema/testdata/gcc-c99-extra/reject/gnu99-init-2.c
int a[] = { [(void *)0 ... 0] = 1 };


int b[] = { [0 ... (void *)0] = 1 };
